<resources>
    <string name="app_name">Đặt vé xem phim</string>
    <string name="text_datvexemphim">Đặt vé xem phim</string>
    <string name="text_tenphim">The Avengers - Hồi kết (2023)</string>
    <string name="text_theloai">Thể loại: Bom tấn</string>
    <string name="text_chonngay">Chọn ngày</string>
    <string name="text_day13.9">13/9</string>
    <string name="text_day14.9">14/9</string>
    <string name="text_day15.9">15/9</string>
    <string name="text_day16.9">16/9</string>
    <string name="text_chonrap">Chọn rạp chiếu</string>
    <string name="text_thanhxuan">CHTT Thanh Xuân</string>
    <string name="text_giaiphong">CHTT Giải Phóng</string>
    <string name="text_mydinh">CHTT Mỹ Đình</string>
    <string name="text_tayson">CHTT Tây Sơn</string>
    <string name="text_xuatchieu">Chọn suất chiếu</string>
    <string name="text_20h">20h00</string>
    <string name="text_21h">21h00</string>
    <string name="text_22h">22h00</string>
</resources>