<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <!-- Header -->

    <!-- Email Input -->

    <!-- Password Input -->

    <!-- Login Button -->

    <!-- Register Link -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F68E8E"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/text_datvexemphim"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:contentDescription="Datvexemphim"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="123dp">

        <ImageView
            android:id="@+id/imageView5"
            android:contentDescription="Avata"
            android:layout_width="103dp"
            android:layout_height="88dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            tools:srcCompat="@drawable/image_26" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="233dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:contentDescription="Tenphim"
                android:paddingTop="10dp"
                android:text="@string/text_tenphim"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:contentDescription="Theloaiphim"
                android:layout_width="233dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:text="@string/text_theloai"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:contentDescription="chonngay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/text_chonngay"
        android:textColor="#0000FF"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="10dp"
            android:layout_weight="1"
            android:text="@string/text_day13.9"
            android:textColorHighlight="#C34949"
            android:textColorHint="#7E1515" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:layout_weight="1"
            android:text="@string/text_day14.9"
            />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/text_day15.9"
            />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:layout_weight="1"
            android:text="@string/text_day16.9"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:contentDescription="chonrapchieu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/text_chonrap"
        android:textColor="#0000FF"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_thanhxuan" />

            <RadioButton
                android:id="@+id/radioButton10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_giaiphong" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_mydinh" />

            <RadioButton
                android:id="@+id/radioButton15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_tayson" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:contentDescription="chonxuatchieu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/text_xuatchieu"
        android:textColor="#0000FF"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_20h" />
        <RadioButton
            android:id="@+id/radioButton18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_21h" />

        <RadioButton
            android:id="@+id/radioButton19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_22h" />
    </LinearLayout>
</LinearLayout>

